--- a/styles/base/_vars.scss
+++ b/styles/base/_vars.scss
@@ -1,4 +1,11 @@
+// COLORS
 $green: #4ea995;
 $offblack: #231f20;
 $white: #ffffff;
+$offwhite: #f3f3f3;
 $gray: #494a49;
+
+
+
+// Custom Media
+$tablet: "screen and (min-width:768px)";
