--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -9,5 +9,10 @@
 @import "base/_reset";
 @import "base/_helpers";
 
+
+// COMPONENTS
+@import "components/_footer";
+
+
 // PAGES
 @import "pages/_home";
