--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,3 +1,16 @@
-body {
-	color: #333;
+address {
+	font-style: normal;
+}
+
+a {
+	color: inherit;
+	&:hover {
+		color: $green;
+	}
+	&:active {
+		color: $green;
+	}
+	&:visited {
+		color: inherit;
+	}
 }
