--- a/styles/base/_vars.scss
+++ b/styles/base/_vars.scss
@@ -1,4 +1,6 @@
-// COLORS
+//––
+// Colors
+//––––––––––––––––––––––––––––––
 $green: #4ea995;
 $offblack: #231f20;
 $white: #ffffff;
@@ -8,5 +10,7 @@ $darkgray: #1e201f;
 
 
 
-// Custom Media
+//––
+// MEDIA QUIRIES
+//––––––––––––––––––––––––––––––
 $tablet: "screen and (min-width:768px)";
