--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,3 +1,6 @@
+//––
+// FOOTER
+//––––––––––––––––––––––––––––––
 footer {
 	background-color: $darkgray;
 	color: $white;
@@ -15,9 +18,9 @@ footer {
 	.contact {
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 180px;
+		max-width: 190px;
 		 .link {
-			 margin-bottom: 10px;
+			 margin-bottom: 5px;
 			 display: block;
 		 }
 	}
@@ -27,13 +30,16 @@ footer {
 		padding: 20px 50px 40px;
 		margin-bottom: 20px;
 		text-align: center;
-		word-break: normal;
 	}
 
 	.location {
 		padding: 20px 50px 40px;
 		margin-bottom: 20px;
 		text-align: center;
+
+		address {
+			padding-bottom: 15px;
+		}
 	}
 
 	.legal {
@@ -56,7 +62,11 @@ footer {
 }
 
 
-@media screen and (min-width:768px) {
+
+//––
+// MEDIA QUIRIES
+//––––––––––––––––––––––––––––––
+@media #{$tablet} {
 	footer {
 		.title {
 			text-align: left;
