ADDS - our firm page, some changes to ui elements

--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -1,19 +1,28 @@
+//––
 // VENDORS
+//––––––––––––––––––––––––––––––
 @import "vendor/normalize";
 @import "vendor/flexboxgrid";
 
 
+//––
 // BASE
+//––––––––––––––––––––––––––––––
 @import "base/_vars";
 @import "base/_type";
 @import "base/_reset";
 @import "base/_helpers";
 
 
+//––
 // COMPONENTS
+//––––––––––––––––––––––––––––––
 @import "components/_ui";
 @import "components/_footer";
 
 
+//––
 // PAGES
+//––––––––––––––––––––––––––––––
 @import "pages/_home";
+@import "pages/_ourfirm";
