--- a/styles/components/_ui.scss
+++ b/styles/components/_ui.scss
@@ -2,5 +2,46 @@
 // HERO ELEMENT
 //––––––––––––––––––––––––––––––
 .ui-hero {
-	
+	min-height: 500px;
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+	.header {
+		text-transform: uppercase;
+		color: $white;
+		font-weight: 600;
+		text-align: center;
+		font-size: 5rem;
+	}
+}
+
+@media #{$tablet} {
+	.ui-hero {
+		min-height: 700px;
+		.header {
+			font-size: 9rem;
+		}
+	}
+}
+
+
+//––
+// BUTTONS
+//––––––––––––––––––––––––––––––
+.btn {
+	border: 2px solid $offblack;
+	padding: 10px 80px;
+	display: inline-block;
+	font-size: 20px;
+	font-weight: 700;
+	background-color: $white;
+	margin: 20px 20px 20px 0;
+	&:hover {
+		background-color: $offblack;
+		color: $white;
+	}
 }
