--- a/styles/components/_ui.scss
+++ b/styles/components/_ui.scss
@@ -3,9 +3,7 @@
 //––––––––––––––––––––––––––––––
 .ui-hero {
 	min-height: 500px;
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat;
+	@include cover;
 	display: flex;
   flex-direction: column;
   justify-content: center;
