ADDS - menu locations, comments for organizing sections of home page

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -4,8 +4,8 @@
 footer {
 	background-color: $darkgray;
 	color: $white;
-	padding: 60px 0;
 	padding: 40px 20px;
+	margin-top: 50px;
 
 	.title {
 		font-size: 4rem;
