--- a/styles/components/_ui.scss
+++ b/styles/components/_ui.scss
@@ -7,6 +7,7 @@
 	display: flex;
   flex-direction: column;
   justify-content: center;
+	margin-bottom: 50px;
 
 	.header {
 		text-transform: uppercase;
