--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -24,12 +24,12 @@ a {
 	&.plus {
 		border: 3px solid $white;
 		display: block;
-		max-width: 100px;
+		width: 50px;
+		height: 45px;
 		margin: 0 auto;
 		text-align: center;
-		padding: 30px 25px;
 		color: $white;
-		line-height: 0;
 		font-size: 25px;
+		line-height: 50px;
 	}
 }
