--- a/styles/components/_ui.scss
+++ b/styles/components/_ui.scss
@@ -44,3 +44,18 @@
 		color: $white;
 	}
 }
+
+
+.link {
+	&.plus {
+		border: 3px solid $white;
+		display: block;
+		width: 50px;
+		height: 45px;
+		margin: 0 auto;
+		text-align: center;
+		color: $white;
+		font-size: 25px;
+		line-height: 50px;
+	}
+}
