ADDS - contact page assets and styles

--- a/styles/base/_vars.scss
+++ b/styles/base/_vars.scss
@@ -14,3 +14,4 @@ $darkgray: #1e201f;
 // MEDIA QUIRIES
 //––––––––––––––––––––––––––––––
 $tablet: "screen and (min-width:768px)";
+$mdscreen: "screen and (min-width:1024px)";
