--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -18,6 +18,7 @@
 // COMPONENTS
 //––––––––––––––––––––––––––––––
 @import "components/_ui";
+@import "components/_form";
 @import "components/nav";
 @import "components/_footer";
 
