--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -3,3 +3,49 @@
 		background-image: url(http://placehold.it/1920x1080);
 	}
 }
+
+.linkedin {
+	.icon {
+		height: auto;
+		width: 30px;
+		display: inline-block;
+		padding-right: 5px;
+		margin-bottom: -9px;
+	}
+}
+
+.contact-details {
+	.content {
+		padding-bottom: 20px;
+	}
+}
+
+
+.contact-us {
+	.copy {
+		font-size: 21px;
+		font-weight: 600;
+		padding: 25px 0;
+	}
+}
+
+
+.nf-form-fields-required {
+	display: none;
+}
+
+.nf-field-description {
+	margin: 0 !important;
+	width: 90% !important;
+	display: inline-block;
+}
+
+@media #{$tablet} {
+	.contact-details .content {
+		margin-right: 20px
+	}
+
+	.contact-us .copy {
+		margin-right: 20px;
+	}
+}
