ADDS - hero image for our firm and contact page as well as compresses others

--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
 	.hero {
-		background-image: url(http://placehold.it/1920x1080);
+		background-image: url(../assets/contact__hero-bg.jpg);
 	}
 }
 
