--- a/styles/pages/_practice-areas.scss
+++ b/styles/pages/_practice-areas.scss
@@ -3,7 +3,7 @@
 //––––––––––––––––––––––––––––––
 .practice-areas {
 	.hero {
-		background-image: url('../assets/home__hero-bg.jpg');
+		background-image: url('../assets/practiceareas__hero-bg.jpg');
 	}
 }
 
