ADDS - blog page with pagination

--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -30,4 +30,5 @@
 @import "pages/_ourfirm";
 @import "pages/_our-attorneys";
 @import "pages/_practice-areas";
+@import "pages/_news";
 @import "pages/_contact";
