ADDS - finishes posts page

--- a/styles/base/_helpers.scss
+++ b/styles/base/_helpers.scss
@@ -36,6 +36,18 @@
 }
 
 
+.hide-mobile {
+	display: none;
+}
+
+@media #{$tablet} {
+	.show-tablet {
+		display: block;
+	}
+}
+
+
+
 //––
 // MIXINS
 //––––––––––––––––––––––––––––––
