ADDS - webpack for js compiling, changes bundles dir, initial search template, etc

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -68,3 +68,9 @@
 		min-height: 295px;
 	}
 }
+
+
+
+.frs-slideshow-container .frs-slideshow-content {
+		background: transparent url('') !important;
+}
