--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -23,6 +23,14 @@
 @import "components/_footer";
 
 
+
+//––
+// Singles
+//––––––––––––––––––––––––––––––
+@import "singles/_single-attorney";
+
+
+
 //––
 // PAGES
 //––––––––––––––––––––––––––––––
