ADDS - updates practice area template with acf content loop, adds links to practice areas grid blocks

--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -27,6 +27,7 @@
 // Singles
 //––––––––––––––––––––––––––––––
 @import "singles/_single-attorney";
+@import "singles/_single-practice-area";
 
 
 //––
