--- a/styles/pages/_practice-areas.scss
+++ b/styles/pages/_practice-areas.scss
@@ -1,7 +1,7 @@
 //––
 // HERO
 //––––––––––––––––––––––––––––––
-.practice-areas {
+.practice-areas, .page-template-template-practice-area {
 	.hero {
 		background-image: url('../assets/practiceareas__hero-bg.jpg');
 	}
