--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -13,7 +13,7 @@ nav {
 	padding: 80px 15px;
 	position: absolute;
 	right: -350px;
-	height: 1000px;
+	height: 100vh;
 	width: 300px;
 	top: -40px;
 
@@ -60,8 +60,32 @@ nav {
 }
 
 
-@media screen and (min-width:910px) {
+@media screen and (min-width:860px) {
+	nav {
+		max-width: 960px;
+		margin: 0 auto;
+	}
 	.menu-header-navigation-container {
-		display: inline-block;
+		background-color: transparent;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		text-align: right;
+		top: 0;
+		right: 25px;
+
+		.menu-item {
+			display: inline-block;
+			padding: 10px;
+		}
+	}
+
+	.hamburger {
+		display: none;
+	}
+
+	.site-logo .logo {
+		height: 55px;
 	}
 }
