ADDS - home slider slick slider options

--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -3,6 +3,7 @@
 //––––––––––––––––––––––––––––––
 @import "vendor/normalize";
 @import "vendor/flexboxgrid";
+@import "vendor/slick";
 
 
 //––
@@ -24,7 +25,7 @@
 
 
 //––
-// Singles
+// SINGLES
 //––––––––––––––––––––––––––––––
 @import "singles/_single-attorney";
 @import "singles/_single-practice-area";
