--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -87,3 +87,45 @@
 .frs-slideshow-container .frs-slideshow-content {
 		background: transparent url('') !important;
 }
+
+
+
+.carousel {
+
+
+
+}
+
+.slide-one {
+
+	text-align: center;
+	color: $white;
+	text-transform: uppercase;
+	font-size: 4rem;
+	font-weight: 600;
+	position: relative;
+	.plus {
+		font-size: 10rem;
+		font-weight: bold;
+		top: 50%;
+		left: 50%;
+		position: absolute;
+		transform: translate(-50%, -50%);
+		color: $offblack;
+		line-height: normal;
+
+	}
+}
+
+@media #{$tablet} {
+	.slide-one {
+		font-size: 8rem;
+	}
+	.slide-one .plus {
+		font-size: 13rem;
+	}
+}
+
+.slick-prev,.slick-next {
+	display: none !important;
+}
