--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -20,6 +20,7 @@
 //––––––––––––––––––––––––––––––
 @import "components/_ui";
 @import "components/_form";
+@import "components/_search";
 @import "components/nav";
 @import "components/_footer";
 
