ADDS - splits some css into separate files for maintainbilities sake

--- a/styles/entry.scss
+++ b/styles/entry.scss
@@ -20,6 +20,8 @@
 //––––––––––––––––––––––––––––––
 @import "components/_ui";
 @import "components/_form";
+@import "components/_consultationform";
+@import "components/_carousel";
 @import "components/_search";
 @import "components/nav";
 @import "components/_footer";
