--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -5,6 +5,7 @@
 	.hero {
 		background-image: url('../assets/home__hero-bg.jpg');
 		margin-bottom: 0;
+		min-height: 675px;
 	}
 }
 
@@ -59,6 +60,7 @@
 @media #{$tablet} {
 	.home .hero {
 		min-height: 850px;
+		margin-bottom: 50px;
 	}
 
 	.injury {
@@ -79,146 +81,5 @@
 
 	.civil {
 		min-height: 295px;
-	}
-}
-
-
-
-
-//––
-// SLIDER
-//––––––––––––––––––––––––––––––
-.frs-slideshow-container .frs-slideshow-content {
-		background: transparent url('') !important;
-}
-
-.carousel {}
-
-.slide-one {
-	text-align: center;
-	color: $white;
-	text-transform: uppercase;
-	font-size: 4rem;
-	font-weight: 600;
-	position: relative;
-
-	.plus {
-		font-size: 10rem;
-		font-weight: bold;
-		top: 50%;
-		left: 50%;
-		position: absolute;
-		transform: translate(-50%, -50%);
-		color: $offblack;
-		line-height: normal;
-	}
-}
-
-@media #{$tablet} {
-	.slide-one {
-		font-size: 8rem;
-	}
-	.slide-one .plus {
-		font-size: 13rem;
-	}
-}
-
-.slick-prev,.slick-next {
-	display: none !important;
-}
-
-
-
-//––
-// CONSULTATION FORM
-//––––––––––––––––––––––––––––––
-.consultation-form {
-	background-color: $offblack;
-	margin-bottom: 40px;
-	display: block;
-
-	.copy {
-		font-size: 1.8rem;
-		color: $white;
-		padding: 30px 10px;
-		text-align: center;
-		font-weight: 600;
-		position: relative;
-
-		.number {
-			color: $green;
-			font-size: 2.4rem;
-		}
-
-		.or {
-			padding: 5px;
-			border-radius: 100px;
-			color: $darkgray;
-			background-color: $gray;
-			margin: 0 8px;
-			font-weight: bold;
-		}
-
-		.form-cross {
-			position: absolute;
-			right: 0;
-			top: 0;
-			display: block;
-			width: 25px;
-			background-color: $gray;
-			padding: 8px;
-			cursor: pointer;
-		}
-	}
-
-	.bar {
-		color: $gray;
-		text-align: center;
-		font-size: 1.8rem;
-		padding: 10px 5px;
-		border-bottom: 2px solid $gray;
-		cursor: pointer;
-	}
-
-	.copy-mobile .or {
-		position: relative;
-		z-index: 6;
-		border:8px solid $offblack;
-
-		&::before {
-			content:'';
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			width: 200px;
-			background-color: $gray;
-			z-index: -1;
-			height: 3px;
-		}
-	}
-
-	label {
-		color: $white;
-	}
-
-	input {
-		background-color: #2d2d2d;
-		color: $white;
-	}
-
-	textarea {
-		background-color: #2d2d2d;
-		color: $white;
-	}
-}
-
-@media #{$tablet} {
-	.home .hero {
-		margin-bottom: 50px;
-	}
-
-	.consultation-form {
-		display: none;
 	}
 }
