--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,8 +1,8 @@
 html, body {
-	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;
 	height: 100%;
-	margin: 0;
 	color: $offblack;
+	overflow-x: hidden;
 }
 
 address {
