--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -1,7 +1,6 @@
 nav {
 	position: relative;
 	top: 30px;
-	height: 0;
 	text-align: center;
 	color: $white;
 	z-index: 100;
@@ -13,9 +12,9 @@ nav {
 	padding: 80px 15px;
 	position: absolute;
 	right: -350px;
-	height: 100vh;
 	width: 300px;
 	top: -40px;
+	min-height: 575px;
 
 	.menu-item {
 		display: block;
