--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 //––
 // HERO
 //––––––––––––––––––––––––––––––
-.home, .search{
+.home{
 	.hero {
 		background-image: url('../assets/home__hero-bg.jpg');
 		margin-bottom: 0;
