--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -1,9 +1,18 @@
 nav {
-	position: relative;
+	position: absolute;
 	top: 30px;
-	text-align: center;
 	color: $white;
 	z-index: 100;
+	width: 100%;
+	left: 0;
+	right: 0;
+	height: 60px;
+
+}
+
+.navigation {
+	position: relative;
+
 }
 
 
@@ -23,19 +32,23 @@ nav {
 	}
 }
 
-
-
 .site-logo {
 	position: relative;
+	z-index: 99;
+	width: 230px;
+	height: 50px;
 
 	.logo {
-		height: 40px;
 		position: absolute;
+		height: 40px;
 		padding-left: 25px;
 		left: 0;
 		top: 0;
 	}
 }
+
+
+
 
 .hamburger {
 	position: relative;
