--- a/styles/components/_consultationform.scss
+++ b/styles/components/_consultationform.scss
@@ -100,6 +100,12 @@
 		display: none !important;
 		text-align: center;
 	}
+
+	.nf-response-msg {
+		text-align: center;
+		color: $white;
+		padding-top: 30px;
+	}
 }
 
 
@@ -112,6 +118,7 @@
 		z-index: 110;
 		max-width: 365px;
 		padding:20px 0;
+		min-height: 518px;
 
 		.copy {
 			padding: 0;
@@ -157,4 +164,5 @@
 
 		}
 	}
+
 }
