--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -11,7 +11,7 @@ footer {
 		font-size: 4rem;
 		font-weight: bold;
 		text-transform: uppercase;
-		margin-bottom: 125px;
+		margin-bottom: 50px;
 		text-align: center;
 	}
 
@@ -20,14 +20,15 @@ footer {
 		margin-right: auto;
 		max-width: 190px;
 		 .link {
-			 margin-bottom: 5px;
+			 margin-bottom: 13px;
 			 display: block;
+			 width: 200px;
 		 }
 	}
 
 	.signup {
 		border: 0;
-		padding: 20px 50px 100px;
+		padding: 20px 50px 40px;
 		margin-bottom: 20px;
 		text-align: center;
 	}
@@ -43,15 +44,16 @@ footer {
 	}
 
 	.legal {
-		color: $gray;
+		color: #717171;
 		text-align: center;
 	}
 
 	.icon {
 		height: auto;
-		width: 20px;
+		width: 30px;
 		display: inline-block;
 		padding-right: 15px;
+		vertical-align: middle;
 	}
 }
 
@@ -85,8 +87,8 @@ footer {
 	footer {
 		.title {
 			text-align: left;
+			margin-bottom: 125px;
 		}
-
 		.signup {
 			border-right: 1px solid $gray;
 			border-left: 1px solid $gray;
@@ -102,6 +104,9 @@ footer {
 		}
 		.contact {
 			margin-right: 55px;
+		}
+		.signup {
+			padding: 20px 50px 100px;
 		}
 	}
 
