--- a/styles/components/_consultationform.scss
+++ b/styles/components/_consultationform.scss
@@ -5,12 +5,11 @@
 	background-color: $offblack;
 	margin-bottom: 40px;
 	display: block;
-	padding-bottom: 20px;
 
 	.copy {
 		font-size: 1.8rem;
 		color: $white;
-		padding: 30px 10px;
+		padding: 30px 10px 0 10px;
 		text-align: center;
 		font-weight: 600;
 		position: relative;
@@ -45,9 +44,15 @@
 		color: $gray;
 		text-align: center;
 		font-size: 1.8rem;
-		padding: 10px 5px;
+		padding: 15px 5px;
 		border-bottom: 2px solid $gray;
 		cursor: pointer;
+
+		.icon {
+			width: 20px;
+			margin-left: 8px;
+			vertical-align: middle;
+		}
 	}
 
 	.copy-mobile .or {
@@ -105,6 +110,11 @@
 		text-align: center;
 		color: $white;
 		padding-top: 30px;
+	}
+
+	.nf-form-cont {
+		max-width: 960px;
+		margin: 0 auto;
 	}
 }
 
