ADDS - arrow to desktop form box

--- a/styles/components/_consultationform.scss
+++ b/styles/components/_consultationform.scss
@@ -172,6 +172,12 @@
 			transform-origin: left top 0;
 			color: #717171;
 
+			.icon {
+				width: 20px;
+				vertical-align:middle;
+				margin-left: 8px;
+			}
+
 		}
 	}
 
