--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -6,7 +6,6 @@ nav {
 	left: 0;
 	right: 0;
 	top: 30px;
-
 }
 
 
@@ -24,6 +23,7 @@ nav {
 		display: block;
 		text-align: right;
 		padding: 10px;
+		text-decoration: none;
 	}
 }
 
