--- a/styles/pages/_our-attorneys.scss
+++ b/styles/pages/_our-attorneys.scss
@@ -13,13 +13,16 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	margin: 25px;
+	border:1px solid red;
 
 	.name {
 		padding-bottom: 40px;
+		padding-top: 15px;
 		position: absolute;
 		bottom: 0;
 		left: 0;
 		right: 0;
+		background: linear-gradient(rgba(0, 0, 0, .0), rgba(0, 0, 0, .9));
 	}
 }
 
