FIX - fonts not called correctly

--- a/styles/base/_type.scss
+++ b/styles/base/_type.scss
@@ -7,7 +7,7 @@ html {
 
 body {
 	font-size: 1.6rem;
-	font-family: 'Proxima Nova', sans-serif;
+	font-family: 'proxima-nova', sans-serif;
 	font-weight: 400;
 }
 
@@ -18,7 +18,7 @@ h4,
 h5,
 h6 {
 	margin: 0 0 2rem 0;
-	font-family: "Proxima Nova", sans-serif;
+	font-family: "proxima-nova", sans-serif;
 	line-height: 1.0;
 }
 
