ADDS - template part for signup form then calls it on every page except contact page

--- a/styles/base/_vars.scss
+++ b/styles/base/_vars.scss
@@ -1,7 +1,7 @@
 //––
 // Colors
 //––––––––––––––––––––––––––––––
-$green: #4ea995;
+$green: #52a895;
 $offblack: #231f20;
 $white: #ffffff;
 $offwhite: #f3f3f3;
